tkg/tkg-examples/contour/Advacned-traffic-split.yaml
# httpproxy-weight-shfiting.yaml
#Traffic splitting based on the weight
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: weight-shifting
  namespace: default
spec:
  virtualhost:
    fqdn: weights.bar.com
  routes:
    - services:
        - name: s1
          port: 80
          weight: 10
        - name: s2
          port: 80
          weight: 90
